export class User{
    constructor(
        public id: number,
        public name: string,
        public passwordHash: string
        ){            
    }
}