@startuml
entity User {
   * id
   - name
   - passwordHash

}

entity Device{
   * id
   - name
   - brand
   - category
   - ean
}

entity InstallAt {
   * id
   - installDate
   - removeDate
   - description


}

entity Room{
    * id
    - roomName
    - roomNumber
}

User ||--o InstallAt
Device ||--o InstallAt
InstallAt o--|| Room

@enduml